# wfsafe-local-server

./: .gitignore  Cargo.toml  Makefile  Readme.md  Rocket.toml  build.rs  docker-compose.yaml
src/: lib.rs  main.rs
src/dtos/: client.rs  flow.rs  keys.rs  mod.rs  packet_number.rs  packet_size.rs  packet_stats.rs  stats.rs  utilities.rs
src/dtos/test/: utilities.rs
src/ebpf/: clients_map.rs  error.rs  header_parser.h  hmac.h  mem.h  mod.rs  program.rs  program_manager.rs  wfsafe.bpf.c  wfsafe.h
src/entities/: database.rs  flow.rs  keys.rs  mod.rs  stats.rs
src/services/: client_service.rs  mod.rs
